Fix close button alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -9911,6 +9911,7 @@ div.desc {
   cursor: pointer;
   
 }
+
 @media (max-width: 390px) {
   .close-button {
     position: absolute;
@@ -9938,17 +9939,17 @@ div.desc {
   }
   
 .close-button {
-    position: absolute;
-    top: 0px;
-    right: 15px;
-    width: 48px;
-    height: 48px;
-    background-color: transparent;
-    font-size: 46px;
-    color: white;
-    cursor: pointer;
-    background: rgb(0 0 0 / 45%);
-    border-radius: 50%;
+  position: absolute;
+  top: 0px;
+  right: 15px;
+  width: 50px;
+  height: 53px;
+  background-color: transparent;
+  font-size: 49px;
+  color: white;
+  cursor: pointer;
+  background: rgb(0 0 0 / 45%);
+  border-radius: 50%;
 }
 
 .prev-button {
